@@ -6,6 +6,8 @@ ubiquity (1.11.19) UNRELEASED; urgency=low
   [ Evan Dandrea ]
   * Only create one virtual desktop when in only-ubiquity mode
     (LP: #343451, LP: #321212).
+  * When the user selects "go back" in response to the weak password dialog,
+    select the text in the first password entry (LP: #344402).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 17 Mar 2009 01:23:39 +0000
 
